# nmedit

libs/jnmprotocol/: build.xml
libs/jnmprotocol2/: build.xml
libs/jpatch/: build.xml
libs/jpdl/: build.xml
libs/jpdl2/: build.xml
libs/jsynth/: build.xml
libs/jtheme/: build.xml
libs/libnmpatch/nmpatch/: nmlexer.h
libs/libnmpatch/src/: Makefile.am  nmlexer.cc
libs/libnmpatch/test/: Makefile.am
libs/libnmprotocol/nmprotocol/: alsadriver.h
libs/libnmprotocol/src/: Makefile.am  alsadriver.cc
libs/libnmprotocol/test/: Makefile.am
libs/libpdl/pdl/: pdllexer.h
libs/libpdl/src/: pdllexer.cc
libs/libppf/src/: Makefile.am  bundle.cc  parser.cc
libs/libppf/test/: Makefile.am
libs/nmutils/: build.xml
libs/nordmodular/: build.xml
libs/patchmodifier/: build.xml
libs/waldorf/: build.xml
nmedit/src/: Makefile.am  main.cc
nomad/: build.xml
nomad/nomad-config/: batik-plugin_ant.xml
nomad/nomad-source/net.sf.nmedit.nomad.boot.splash/: build.xml
nomad/nomad-source/plugins/net.sf.nmedit.jpatch/: plugin.xml
nomad/nomad-source/plugins/net.sf.nmedit.jsynth/: build.xml  plugin.xml
nomad/nomad-source/plugins/net.sf.nmedit.jtheme/: build.xml  plugin.xml
nomad/nomad-source/plugins/net.sf.nmedit.nmutils/: plugin.xml
nomad/nomad-source/plugins/net.sf.nmedit.nomad.core/: build.xml  plugin.xml
nomad/nomad-source/plugins/net.sf.nmedit.nordmodular/: build.xml  plugin.xml
nomad/nomad-source/plugins/net.sf.nmedit.patchmodifier/: build.xml  plugin.xml
nomad/project-utils/: build.xml
patchloader/src/: Makefile.am
(+7 files in other folders)
